# pyVCT

./: .gitignore  .pre-commit-config.yaml  From_png.ipynb  README.md  data.csv  example.ipynb  libcpmfem.pyx  pyproject.toml  setup.py
VCT/: CM.c  CPM_dH.c  Makefile  cellmoves.c  cpmfem.c  def.h  draw.py  functions.h  init.c  libcpmfem.h  main.c  mylib.c  vct.py
VCT/conf/defs/: def1.h  def2.h  def3.h  def3L.h  def4.h
VCT/conf/various/: cnfgMFa.cfg  cnfgMN3.cfg  cnfgMNa.cfg  cnfgSF2.cfg  cnfgSFa.cfg  cnfgSNa.cfg
notebooks/: example_usage.ipynb  test.ipynb
pyVCT/: __init__.py  hamiltonian.py  utils.py  vct.py
pyVCT/config/: params.yaml
utils/: auxiliary.py  draw.py  parse_config.py
utils/.ipynb_checkpoints/: auxiliary-checkpoint.py  config-checkpoint.yaml  draw-checkpoint.py
