[tool.poetry]
name = "pyvct"
version = "0.1.0"
description = ""
authors = ["Alexey Kalinin <kalinin.ai@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
