[tool.poetry]
name = "pyvct"
version = "0.1.0"
description = ""
authors = ["Alexey Kalinin <kalinin.ai@phystech.edu>", "Vadim Naumov <naumov.vd@phystech.edu>"]
readme = "README.md"
packages = [{include = "pyVCT"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ipykernel = "^6.24.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
