[tool.poetry]
name = "pyvct"
version = "0.1.0"
description = ""
authors = ["Alexey Kalinin <kalinin.ai@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
cython = "^3.0.2"
pyyaml = "^6.0.1"
jupyterlab = "^4.0.6"
wandb = "^0.15.11"
scikit-image = "^0.21.0"
feret = "^1.3.1"
seaborn = "^0.13.0"
numpngw = "^0.1.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
